# omchessboards

./: .dockerignore  Cargo.toml  Dockerfile.firehorse  README.md  build.rs  compose.yml  deno.json  dprint.json  network.proto
firehorse/: .editorconfig  .gitignore  ChessConnection.cs  Connection.cs  Dispatcher.cs  Firehorse.csproj  Firehorse.sln  PositionQueue.cs  Program.cs  Scraper.cs  SharedChannels.cs  Util.cs  firehorse.capnp  firehorse.capnp.cs
firehorse-persister/: Cargo.toml  firehorse.capnp
firehorse-persister/.sqlx/: query-0704e7cced90d6fa9a54bf60b6ec0857f283f88bae1e041385185d9e3bd2189b.json
firehorse-persister/src/: main.rs
firehorse-test/: Cargo.toml  build.rs  firehorse.capnp
firehorse-test/src/: main.rs
firehorse/Chess/: AsyncScraperQueue.cs  Connection.cs  ConnectionManager.cs  ConstantScraperQueue.cs  InvalidMoveException.cs  Scraper.cs  ScraperPositionQueue.cs
firehorse/Protocol/: ChannelRelay.cs  FirehorseEndpoint.cs  FirehorseRpc.cs  FirehorseServer.cs
src/: lib.ts  main.rs  network.rs  proxy.rs  util.rs
src/proto/: network.ts
src/protos/: network.proto
src/worker/: board.rs  mod.rs
userscripts/: proxy.user.js
