[package]
name = "firehorse-persister"
version = "0.1.0"
edition = "2024"

[build-dependencies]
capnpc = "0.21.0"

[dependencies]
async-compression = { version = "0.4.23", features = ["tokio", "zstd"] }
capnp = "0.21.0"
capnp-rpc = "0.21.0"
eyre = "0.6.12"
flume = { version = "0.11.1", features = ["async"] }
futures = "0.3.31"
image = "0.25.6"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["compat"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "chrono" ] }
chrono = "0.4.41"
strum = "0.27.1"
redis = "0.30.0"
