[package]
name = "firehorse-persister"
version = "0.1.0"
edition = "2024"

[build-dependencies]
capnpc = "0.21.0"

[dependencies]
async-compression = { version = "0.4.23", features = ["tokio", "zstd"] }
capnp = "0.21.0"
capnp-rpc = "0.21.0"
eyre = "0.6.12"
flume = { version = "0.11.1", features = ["async"] }
futures = "0.3.31"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["compat"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring-native-roots", "postgres" ] }
strum = "0.27.1"
redis = { version = "0.31.0", features = ["r2d2", "tokio-comp", "ahash"] }
rayon = "1.10.0"
dashmap = "6.1.0"
r2d2 = "0.8.10"
